# gfx_rs_sandbox

./: .gitignore
sqtoy/: Cargo.toml  build.rs
sqtoy/shaders/: rect_150.glslf
sqtoy/src/: lib.rs  logging.rs  main.rs  utils.rs
