[package]
name = "sqtoy"
version = "0.1.0"
authors = ["root"]

[dependencies]
winit = "=0.17.2"
image = "~0.19.0"
log = "*"
env_logger = "*"
ansi_term = "*"
floating-duration = "*"

[dependencies.gfx-hal]
git = "https://github.com/gfx-rs/gfx"
rev = "1d8b50e5"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.gfx-backend-vulkan]
git = "https://github.com/gfx-rs/gfx"
rev = "1d8b50e5"

[build-dependencies]
glsl-to-spirv = "=0.1.6"

[profile.release]
lto = true
